--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server db.json --static ./static --port 3001"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -18,6 +19,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "json-server": "^0.16.2",
     "react-scripts": "3.4.4",
     "typescript": "^4.0.3"
   },
