--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server db.json --static ./static --port 3001"
+    "server": "json-server db.json --static ./static --port 3001",
+    "serve": "npm run server && npm start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -19,6 +20,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.1",
     "json-server": "^0.16.2",
     "react-scripts": "3.4.4",
     "typescript": "^4.0.3"
