--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server db.json --static ./static --port 3001",
+    "server": "json-server db.json --routes routes.json --static ./static --port 3001",
     "serve": "run-p server start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.20.0",
     "history": "^5.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
