--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "serve": "run-p server start"
   },
   "dependencies": {
+    "@date-io/moment": "^2.10.6",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "axios": "^0.20.0",
     "history": "^5.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0"
