--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.20.0",
+    "clsx": "^1.1.1",
     "history": "^5.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.0",
