--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^3.4.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/history": "^4.7.8",
+    "@types/lodash": "^4.14.162",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "connect-history-api-fallback": "^1.6.0",
@@ -36,6 +38,7 @@
     "json-server": "^0.16.2",
     "npm-run-all": "^4.1.5",
     "react-scripts": "3.4.4",
+    "react-test-renderer": "^17.0.1",
     "typescript": "^4.0.3"
   },
   "eslintConfig": {
